# mermaid-rs-renderer

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: update-homebrew.sh
.github/workflows/: ci.yml  release.yml
docs/: benchmark-suite-design.md  dagre-feedback-loop.md  release.md
examples/: port_quality.rs  radar_legend_probe.rs
scripts/: bench_batch.py  bench_compare.py  bench_render.py  check_repo.py  conformance_compare.py  hard_gate.py  layout_compare_report.py  layout_score.py  priority_bench.py  profile_summary.py  quality_bench.py  quality_gate.py  render_comparison.py
src/: cli.rs  config.rs  ir.rs  layout_dump.rs  lib.rs  parser.rs  render.rs  validator.rs
src/layout/: architecture.rs  invariants.rs  journey.rs  mindmap.rs  mod.rs  pie.rs  quadrant.rs  radar.rs  routing.rs  sankey.rs  subgraphs.rs  text.rs  timeline.rs  types.rs  xychart.rs
src/layout/flowchart/: aspect_fold.rs  edge_pipeline.rs  finalize.rs  layered_engine.rs  manual_layout.rs  mod.rs  objectives.rs  path_cleanup.rs  post_route.rs  subgraph_spacing.rs
tests/: aspect_fold_suite.rs  cli_suite.rs  correctness_suite.rs  determinism_suite.rs  hard_gate_baseline.json  invariant_suite.rs  layout_suite.rs  parse_errors.rs  quality_baseline.json  radar_edge_suite.rs  radar_negative_suite.rs  requirement_theme_fontsize_suite.rs  robustness_suite.rs  visual_issue_suite.rs
tests/fixtures/block/: nested_groups.mmd
tests/fixtures/radar/: negative.mmd  nonnumeric_all.mmd  nonnumeric_empty_token.mmd  nonnumeric_first_curve.mmd  nonnumeric_middle.mmd  nonnumeric_second_curve.mmd
tests/fixtures/sequence/: par_alt.mmd
tests/fixtures/state/: note_block.mmd
